<resources>
    <string name="app_name">Task Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_activity">Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="new_task_name">Name:</string>
    <string name="new_task_hint">Task Name</string>
    <string name="action_statistic">Statistic</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="main_list_empty">No tasks added. Click the plus button to add a new task.</string>
    <string name="timer_finished_text">00:00</string>
    <string name="context_menu_done">Done</string>
    <string name="context_menu_undone">Undone</string>
    <string name="context_menu_delete">Delete</string>
    <string name="time_done_default">00h 00m</string>
    <string name="activity_edit_task_minutes">m</string>
    <string name="activity_edit_task_description">Description</string>
    <string name="activity_edit_task_save">Save</string>
    <string name="list_item_name">Task Name</string>
    <string name="list_item_status">0/0 Subtasks done</string>
    <string name="activity_timer_taskname">Taskname</string>
    <string name="activity_new_task_description">Description</string>
    <string name="activity_new_task_save">Add and Save</string>
    <string name="activity_edit_task_hour">h</string>
    <string name="activity_edit_task_time_est">Time Estimate</string>
    <string name="activity_new_task_hour">h</string>
    <string name="activity_new_task_time_est">Time Estimate</string>
    <string name="task_item_description">Task Image</string>
    <string name="activity_timer_default">00:00</string>
    <string name="activity_new_task_minute">m</string>
    <string name="activity_timer_subtitle_work">Time until break</string>
    <string name="cancel">Cancel</string>
    <string name="pick_timer_mode">Select a timer mode</string>
    <string name="stopwatch_mode_subtitle">Stopwatch</string>
    <string name="activity_new_task_time_done">Time Done</string>
    <string name="task_item_description_empty">No description</string>
    <string name="error_no_name">Please enter a name!</string>
    <string name="context_menu_duplicate">Duplicate</string>
    <string name="content_timer_status_empty">0s spent</string>
    <string name="context_menu_archive">Archive</string>
    <string name="context_menu_edit">Edit</string>
    <string name="action_archive">Archive</string>
    <string name="dialog_stop_pomodoro_title">Stop Pomodoro</string>
    <string name="dialog_stop_pomodoro_message">Are you sure to stop pomodoro?</string>
    <string name="positive_button_yes">YES</string>
    <string name="positive_button_no">NO</string>
    <string name="pomodoro_break_up">Break is up.</string>
    <string name="pomodoro_work_time_up">Work time is up.</string>
    <string name="pomodoro_break_time">It\'s break time.</string>
    <string name="color_spinner_label">Color:</string>
    <string name="title_activity_statistics">Statistic</string>
    <string name="statistic_list_empty">No previous statistic data found.</string>
    <string name="statistic_action_default">Action</string>
    <string name="statistic_timestamp_default">2016-02-24 13:38:51.0</string>
    <string name="statistics_worktime_default">Work: 00h 00m 00s</string>
    <string name="statistics_breaktime_default">Break: 00m 00s</string>
</resources>
