<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutLeft"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/statisticThumbnail"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/task_item_description"
            android:scaleType="fitStart"
            android:src="@drawable/ic_play_arrow_white_48dp" />

        <TextView
            android:id="@+id/tvAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/statistic_action_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTimeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/statistic_timestamp_default"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayoutLeft"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/linearLayoutLeft"
        android:layout_toRightOf="@+id/linearLayoutLeft"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTaskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvWorkTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_worktime_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvBreakTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_breaktime_default"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>